added carousel with BEM css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Top navigation section starts -->
     <nav class="wooTop__nav navbar py-3">
-      <div class="container d-flex">
+      <div class="container d-flexxxxxx">
         <ul class="wooTop__nav__leftmenu navbar-nav flex-row">
           <li class="nav-item">
             <a
@@ -113,6 +113,117 @@
     </nav>
     <div class="container"><hr class="m-0 p-0" /></div>
     <!-- Top navigation section ends -->
+
+    <!-- Navigation section bottom starts -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container d-flex justify-content-center">
+        <ul class="navbar-nav flex-row">
+          <li class="nav-item px-3">
+            <a
+              class="wooTop__nav__items wooTop__nav__dropdown nav-link"
+              href="#"
+              >Home
+              <span class="ps-2"><i class="fa fa-angle-down"></i></span>
+              <ul class="navbar-nav wooTop__nav__submenu">
+                <li class="nav-item">English</li>
+                <li class="nav-item">French</li>
+                <li class="nav-item">Germany</li>
+              </ul>
+            </a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="wooTop__nav__items nav-link" href="#">Shop</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="wooTop__nav__items nav-link" href="#">Collection</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="wooTop__nav__items nav-link" href="#">Pages</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="wooTop__nav__items nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="wooTop__nav__items nav-link" href="#">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Navigation section bottom ends -->
+
+    <!-- Carousel section starts -->
+    <div class="container">
+      <div
+        id="WooMain__carousel"
+        class="WooMain__carousel carousel slide"
+        data-bs-touch="false"
+        data-bs-interval="false"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="WooMain__carousel__content">
+              <div class="WooMain__carousel__content__text">
+                <h3 class="WooMain__carousel__content__text__subtitle">
+                  -20% Off All Items
+                </h3>
+                <h1 class="WooMain__carousel__content__text__header">
+                  Green Up <br />
+                  Your Room
+                </h1>
+                <div>
+                  <button
+                    class="WooMain__carousel__content__text__button px-5 py-3"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+              <img src="images/Project-img03.png" alt="" />
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="WooMain__carousel__content">
+              <div class="WooMain__carousel__content__text">
+                <h3 class="WooMain__carousel__content__text__subtitle">
+                  -40% Off All Items
+                </h3>
+                <h1 class="WooMain__carousel__content__text__header">
+                  Summer Offer <br />
+                  2021 Collection
+                </h1>
+                <div>
+                  <button
+                    class="WooMain__carousel__content__text__button px-5 py-3"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+              <img src="images/Project-img04.png" height="507px" alt="" />
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#WooMain__carousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#WooMain__carousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <!-- Carousel section ends -->
 
     <!-- linking bootstrap js scripts -->
     <script
