Added featured banner section

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
     <!-- Navigation section bottom ends -->
 
     <!-- Carousel section starts -->
-    <div class="container">
+    <section class="container">
       <div
         id="WooMain__carousel"
         class="WooMain__carousel carousel slide"
         data-bs-touch="false"
-        data-bs-interval="false"
+        data-bs-interval="5000"
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -222,8 +222,50 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </section>
     <!-- Carousel section ends -->
+
+    <!-- Featured-banner-card section starts -->
+    <div class="WooFeatCard">
+      <div class="container">
+        <div class="row">
+          <div class="WooFeatCard__pad  col-md-4">
+          <div class="WooFeatCard__single">
+              <img src="images/Project-img05.png" alt="" />
+              <div class="WooFeatCard__single__content">
+                <h3 class="WooFeatCard__single__content__title">Peepal</h3>
+                <h4 class="WooFeatCard__single__content__price">Starting at <span>$99.00</span></h4>
+                <a class="WooFeatCard__single__content__icon"><i class="fas fa-long-arrow-alt-right"></i></a>
+              </div>
+            </div>
+            </div><!-- single__one -->
+
+            <div class="WooFeatCard__pad  col-md-4">
+              <div class="WooFeatCard__single">
+                  <img src="images/Project-img06.png" alt="" />
+                  <div class="WooFeatCard__single__content">
+                    <h3 class="WooFeatCard__single__content__title">Banyan</h3>
+                    <h4 class="WooFeatCard__single__content__price">Starting at <span>$99.00</span></h4>
+                    <a class="WooFeatCard__single__content__icon"><i class="fas fa-long-arrow-alt-right"></i></a>
+                  </div>
+                </div>
+                </div><!-- single__two -->
+
+            <div class="WooFeatCard__pad  col-md-4">
+              <div class="WooFeatCard__single">
+                  <img src="images/Project-img07.png" alt="" />
+                  <div class="WooFeatCard__single__content">
+                    <h3 class="WooFeatCard__single__content__title">Aloe Vera</h3>
+                    <h4 class="WooFeatCard__single__content__price">Starting at <span>$99.00</span></h4>
+                    <a class="WooFeatCard__single__content__icon"><i class="fas fa-long-arrow-alt-right"></i></a>
+                  </div>
+                </div>
+                </div><!-- single__three -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Featured banner card section neds -->
 
     <!-- linking bootstrap js scripts -->
     <script
