--- a/index.html
+++ b/index.html
@@ -698,6 +698,92 @@
     </section>
     <!-- Support section ends -->
 
+    <!-- Subscribe section starts -->
+    <section class="container">
+      <div class="row">
+        <div class="col-8 offset-md-2">
+
+          <div class="WooSubscribe text-center">
+            <h2 class="WooSubscribe__title">Subscribe</h2>
+            <p class="WooSubscribe__description">
+              Subscribe to our newsletter to receive news on update
+            </p>
+            <form class="WooSubscribe__form">
+              <input class="WooSubscribe__form__input" placeholder="Your email address" type="email">
+              <button class="WooSubscribe__form__submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- Subscribe section ends -->
+
+    <!-- Footer starts -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-2">
+            <div class="footer__logo">
+              <img src="images/logo.png" alt="">
+              <div class="copyright">
+                © 2021 Flone. <br> All Rights Reserved
+              </div>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="footer__widget">
+          <ul>
+            <div class="footer__widget__title">ABOUT US</div>
+            <li>About us</li>
+            <li>Store location</li>
+            <li>Contact</li>
+            <li>Orders Traking</li>
+          </ul>
+        </div>
+      </div>
+        <div class="col-2">
+          <div class="footer__widget">
+          <ul>
+            <div class="footer__widget__title">useful links</div>
+            <li>Returns</li>
+            <li>Support Policy</li>
+            <li>Size guide</li>
+            <li>FAQs</li>
+          </ul>
+        </div>
+      </div>
+        <div class="col-2">
+          <div class="footer__widget">
+          <ul>
+            <div class="footer__widget__title">follow us</div>
+            <li>Facebook</li>
+            <li>Twitter</li>
+            <li>Instagram</li>
+            <li>Youtube</li>
+          </ul>
+        </div>
+      </div>
+      
+    <div class="col-4">
+      <div class="footer__widget">
+        <div class="footer__widget__title">
+          Subscribe
+        </div>
+        <div class="footer__widget__description">
+          Get E-mail updates about our latest shop and special offers.
+        </div>
+        <form class="WooSubscribe__form">
+          <input class="WooSubscribe__form__input" placeholder="Your email address" type="email">
+          <button class="WooSubscribe__form__submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+        </form>
+      </div>
+    </div>
+  </div>
+      </div>
+    </footer>
+    <!-- Footer ends -->
+
     <!-- linking bootstrap js scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
