Added a template for other page specially header for other pages

--- a/index.html
+++ b/index.html
@@ -18,88 +18,102 @@
     <!-- Top navigation section starts -->
     <nav class="wooTop__nav navbar py-3">
       <div class="container d-flexxxxxx">
-        <ul class="wooTop__nav__leftmenu navbar-nav flex-row">
-          <li class="nav-item">
-            <a
-              class="
-                wooTop__nav__items
-                wooTop__nav__item--bordered
-                wooTop__nav__dropdown
-                nav-link
-                px-3
-                py-1
-              "
-              href="#"
-              >English
-              <span class="ps-2"><i class="fa fa-angle-down"></i></span>
-              <ul class="navbar-nav wooTop__nav__submenu">
-                <li class="nav-item">English</li>
-                <li class="nav-item">French</li>
-                <li class="nav-item">Germany</li>
-              </ul>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="
-                wooTop__nav__items
-                wooTop__nav__item--bordered
-                wooTop__nav__dropdown
-                nav-link
-                px-3
-                py-1
-              "
-              href="#"
-              >EUR
-              <ul class="navbar-nav wooTop__nav__submenu">
-                <li class="nav-item">USD</li>
-                <li class="nav-item">EUR</li>
-                <li class="nav-item">GBP</li>
-              </ul>
-              <span class="ps-2"><i class="fa fa-angle-down"></i></span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="
-                wooTop__nav__items wooTop__nav__item--bordered
-                nav-link
-                px-3
-                py-1
-              "
-              href="#"
-              >Call Us 3965410</a
-            >
-          </li>
-        </ul>
-        <img src="images/logo.png" alt="logo" class="wooTop__nav__logo" />
-        <ul class="wooTop__nav__rightmenu navbar-nav flex-row">
-          <li class="nav-item">
-            <a class="wooTop__nav__items nav-link p-3" href="#"
-              ><span><i class="fa fa-search"></i></span
-            ></a>
-          </li>
-          <li class="nav-item border-end-0">
-            <a class="wooTop__nav__items nav-link p-3" href="#"
-              ><span><i class="fa fa-user"></i></span
-            ></a>
-          </li>
-          <li class="nav-item border-end-0">
-            <a class="wooTop__nav__items nav-link p-3" href="#"
-              ><span><i class="fas fa-random"></i></span
-            ></a>
-          </li>
-          <li class="nav-item border-end-0">
-            <a class="wooTop__nav__items nav-link p-3" href="#"
-              ><span><i class="fa fa-heart"></i></span
-            ></a>
-          </li>
-          <li class="nav-item border-end-0">
-            <a class="wooTop__nav__items nav-link p-3" href="#"
-              ><span><i class="fas fa-shopping-bag"></i></span
-            ></a>
-          </li>
-        </ul>
+        <div class="col-4">
+          <ul class="wooTop__nav__leftmenu navbar-nav flex-row">
+            <li class="nav-item">
+              <a
+                class="
+                  wooTop__nav__items
+                  wooTop__nav__item--bordered
+                  wooTop__nav__dropdown
+                  nav-link
+                  px-3
+                  py-1
+                "
+                href="#"
+                >English
+                <span class="ps-2"><i class="fa fa-angle-down"></i></span>
+                <ul class="navbar-nav wooTop__nav__submenu">
+                  <li class="nav-item">English</li>
+                  <li class="nav-item">French</li>
+                  <li class="nav-item">Germany</li>
+                </ul>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="
+                  wooTop__nav__items
+                  wooTop__nav__item--bordered
+                  wooTop__nav__dropdown
+                  nav-link
+                  px-3
+                  py-1
+                "
+                href="#"
+                >EUR
+                <ul class="navbar-nav wooTop__nav__submenu">
+                  <li class="nav-item">USD</li>
+                  <li class="nav-item">EUR</li>
+                  <li class="nav-item">GBP</li>
+                </ul>
+                <span class="ps-2"><i class="fa fa-angle-down"></i></span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="
+                  wooTop__nav__items wooTop__nav__item--bordered
+                  nav-link
+                  px-3
+                  py-1
+                "
+                href="#"
+                >Call Us 3965410</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-4 text-center">
+          <img src="images/logo.png" alt="logo" class="wooTop__nav__logo" />
+        </div>
+       
+        <div class="col-4">
+          <ul
+            class="
+              wooTop__nav__rightmenu
+              navbar-nav
+              flex-row
+              justify-content-end
+            "
+          >
+            <li class="nav-item">
+              <a class="wooTop__nav__items nav-link py-3 px-3" href="#"
+                ><span><i class="fa fa-search"></i></span
+              ></a>
+            </li>
+            <li class="nav-item border-end-0">
+              <a class="wooTop__nav__items nav-link py-3 px-3" href="#"
+                ><span><i class="fa fa-user"></i></span
+              ></a>
+            </li>
+            <li class="nav-item border-end-0">
+              <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
+                ><span><i class="fas fa-random"></i></span
+              ></a>
+            </li>
+            <li class="nav-item border-end-0">
+              <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
+                ><span><i class="fa fa-heart"></i></span
+              ></a>
+            </li>
+            <li class="nav-item border-end-0">
+              <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
+                ><span><i class="fas fa-shopping-bag"></i></span
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div class="container"><hr class="m-0 p-0" /></div>
@@ -345,8 +359,8 @@
 
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
+                  <img src="images/Project-img10.jpg" alt="">
+                  <img src="images/Project-img11.jpg" alt="">
                 </div>
                 <div class="WooDailyDeals__product__single__badges">
                   <span>-10%</span>
@@ -387,8 +401,8 @@
 
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
+                  <img src="images/Project-img12.jpg" alt="">
+                  <img src="images/Project-img13.jpg" alt="">
                 </div>
                 <div class="WooDailyDeals__product__single__badges">
                   <span>-10%</span>
@@ -429,8 +443,8 @@
 
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
+                  <img src="images/Project-img14.jpg" alt="">
+                  <img src="images/Project-img15.jpg" alt="">
                 </div>
                 <div class="WooDailyDeals__product__single__badges">
                   <span>-10%</span>
@@ -473,8 +487,8 @@
 
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
+                  <img src="images/Project-img11.jpg" alt="">
+                  <img src="images/Project-img10.jpg" alt="">
                 </div>
                 <div class="WooDailyDeals__product__single__badges">
                   <span>-10%</span>
@@ -515,7 +529,7 @@
 
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
+                  <img src="images/Project-img13.jpg" alt="">
                   <img src="images/Project-img09.jpg" alt="">
                 </div>
                 <div class="WooDailyDeals__product__single__badges">
@@ -551,92 +565,6 @@
                   </div>
                 </div>
               </div> <!--product single -->
-
-            </div> <!--one column --> 
-            <div class="col-md-3">
-
-              <div class="WooDailyDeals__product__single">
-                <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
-                </div>
-                <div class="WooDailyDeals__product__single__badges">
-                  <span>-10%</span>
-                  <span>New</span>
-                </div>
-                <div class="WooDailyDeals__product__single__action">
-                  <button class="WooDailyDeals__product__single__action__wishlist">
-                    <i class="fas fa-heart"></i>
-                  </button>
-                  <button class="WooDailyDeals__product__single__action__cart">
-                    <i class="fas fa-cart-plus"></i>
-                    Add To Cart
-                  </button>
-                  <button class="WooDailyDeals__product__single__action__quickview">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                </div>
-                <div class="WooDailyDeals__product__single__info  text-center">
-                  <div class="WooDailyDeals__product__single__info__title">
-                    <a href="#">Lorem ipsum plant two</a>
-                  </div>
-                  <div class="WooDailyDeals__product__single__info__rating">
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="gray"><i class="fas fa-star"></i></span>
-                  </div>
-                  <div class="WooDailyDeals__product__single__info__price">
-                    <span class="WooDailyDeals__product__single__info__price__sale">$75</span>
-                    <span class="WooDailyDeals__product__single__info__price__regular">$95</span>
-                  </div>
-                </div>
-              </div> <!--product single -->
-
-            </div> <!--one column -->  
-            <div class="col-md-3">
-
-              <div class="WooDailyDeals__product__single">
-                <div class="WooDailyDeals__product__single__img">
-                  <img src="images/Project-img08.jpg" alt="">
-                  <img src="images/Project-img09.jpg" alt="">
-                </div>
-                <div class="WooDailyDeals__product__single__badges">
-                  <span>-10%</span>
-                  <span>New</span>
-                </div>
-                <div class="WooDailyDeals__product__single__action">
-                  <button class="WooDailyDeals__product__single__action__wishlist">
-                    <i class="fas fa-heart"></i>
-                  </button>
-                  <button class="WooDailyDeals__product__single__action__cart">
-                    <i class="fas fa-cart-plus"></i>
-                    Add To Cart
-                  </button>
-                  <button class="WooDailyDeals__product__single__action__quickview">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                </div>
-                <div class="WooDailyDeals__product__single__info  text-center">
-                  <div class="WooDailyDeals__product__single__info__title">
-                    <a href="#">Lorem ipsum plant two</a>
-                  </div>
-                  <div class="WooDailyDeals__product__single__info__rating">
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="yellow"><i class="fas fa-star"></i></span>
-                    <span class="gray"><i class="fas fa-star"></i></span>
-                  </div>
-                  <div class="WooDailyDeals__product__single__info__price">
-                    <span class="WooDailyDeals__product__single__info__price__sale">$75</span>
-                    <span class="WooDailyDeals__product__single__info__price__regular">$95</span>
-                  </div>
-                </div>
-              </div> <!--product single -->
-
-            </div> <!--one column --> 
 
           </div>
         </div>
