added the arichive page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <body>
+  <body class="home">
     <!-- Top navigation section starts -->
     <nav class="wooTop__nav navbar py-3">
       <div class="container d-flexxxxxx">
@@ -137,7 +137,7 @@
             </a>
           </li>
           <li class="nav-item px-3">
-            <a class="wooTop__nav__items nav-link" href="#">Shop</a>
+            <a class="wooTop__nav__items nav-link" href="/archive-shop.html">Shop</a>
           </li>
           <li class="nav-item px-3">
             <a class="wooTop__nav__items nav-link" href="#">Collection</a>
@@ -315,6 +315,7 @@
 
             <div class="col-md-3">
 
+              <!--************ product single markup starts **************-->
               <div class="WooDailyDeals__product__single">
                 <div class="WooDailyDeals__product__single__img">
                   <img src="images/Project-img08.jpg" alt="">
@@ -353,6 +354,7 @@
                   </div>
                 </div>
               </div> <!--product single -->
+              <!--************ product single markup ends **************-->
 
             </div> <!--one column -->  
             <div class="col-md-3">
