--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </a>
           </li>
           <li class="nav-item px-3">
-            <a class="wooTop__nav__items nav-link" href="/archive-shop.html">Shop</a>
+            <a class="wooTop__nav__items nav-link" href="/E-commerce-design/archive-shop.html">Shop</a>
           </li>
           <li class="nav-item px-3">
             <a class="wooTop__nav__items nav-link" href="#">Collection</a>
