Finished the single product page

--- a/markup-template.html
+++ b/markup-template.html
@@ -291,6 +291,33 @@
 
     <!-- *********************** main content here ************************* -->
 
+    
+
+    <!-- *********************** REVIEW TEMPLATE  ************************* -->
+    <div class="WooProductReview">
+      <div class="d-flex p-3">
+        <img src="images/media-img2.jpg" alt="John Doe"
+             class="me-3 mt-3" style="width:auto;height:100px;">
+        <div>
+            <div class="d-flex align-items-center">
+              <h4 class="WooProcuctReview__name">John Doe</h4>
+              <div class="WooProcuctReview__rating">
+                <span class="yellow"><i class="fas fa-star"></i></span>
+                <span class="yellow"><i class="fas fa-star"></i></span>
+                <span class="yellow"><i class="fas fa-star"></i></span>
+                <span class="yellow"><i class="fas fa-star"></i></span>
+                <span class="gray"><i class="fas fa-star"></i></span>
+            </div>
+            </div>
+            <p class="WooProcuctReview__description">Vestibulum ante ipsum primis aucibus orci luctustrices posuere cubilia Curae Suspendisse viverra ed viverra.</p>  
+
+            <!--********** next nested review goes here******** -->
+
+        </div>    
+    </div> <!-- nested review -->
+    </div>
+    <!-- *********************** REVIEW TEMPLATE  ************************* -->
+
     <!-- Footer starts -->
     <footer>
       <div class="container">
