again fixed the font awsome issue

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Flone | Plants Home</title>
 
     <!-- linking fontawesome files -->
-    <script defer src="/js/brands.min.js"></script>
-    <script defer src="/js/solid.min.js"></script>
-    <script defer src="/js/fontawesome.min.js"></script>
+    <script defer src="./js/brands.min.js"></script>
+    <script defer src="./js/solid.min.js"></script>
+    <script defer src="./js/fontawesome.min.js"></script>
     <!-- linking main css file -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
