fixed the support section for git page again

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         <div class="col-4">
           <div class="WooSupport__single text-center">
             <div class="WooSupport__single__icon">
-              <img src="./images/Project-img16.png" alt="">
+              <img src="images/Project-img16.png" alt="">
             </div>
             <div class="WooSupport__single__title">
               Free Shipping
@@ -598,7 +598,7 @@
         <div class="col-4">
           <div class="WooSupport__single text-center">
             <div class="WooSupport__single__icon">
-              <img src="./images/Project-img17.png" alt="">
+              <img src="images/Project-img17.png" alt="">
             </div>
             <div class="WooSupport__single__title">
               Support 24/7
@@ -612,7 +612,7 @@
         <div class="col-4">
           <div class="WooSupport__single text-center">
             <div class="WooSupport__single__icon">
-              <img src="./images/Project-img18.png" alt="">
+              <img src="images/Project-img18.png" alt="">
             </div>
             <div class="WooSupport__single__title">
               Money Return
