fixed all the page header

--- a/single-product.html
+++ b/single-product.html
@@ -7,18 +7,9 @@
     <title>Single Product | Flone</title>
 
     <!-- linking fontawesome files -->
-    <script
-      defer
-      src="node_modules/@fortawesome/fontawesome-free/js/brands.js"
-    ></script>
-    <script
-      defer
-      src="node_modules/@fortawesome/fontawesome-free/js/solid.js"
-    ></script>
-    <script
-      defer
-      src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"
-    ></script>
+    <script src="./js/brands.min.js"></script>
+    <script src="./js/solid.min.js"></script>
+    <script src="./js/fontawesome.min.js"></script>
     <!-- linking main css file -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
