added the pro version of the home a shop archive page

--- a/index-pro.html
+++ b/index-pro.html
@@ -7,10 +7,7 @@
     <title>Flone | Plants Home</title>
 
     <!-- linking fontawesome files -->
-    <script src="./js/brands.min.js"></script> -->
-    <script src="./js/solid.min.js"></script>
-    <script src="./js/regular.min.js"></script>
-    <script src="./js/fontawesome.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="./js/fontawesome-p.js"></script>
     <!-- linking main css file -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -91,27 +88,27 @@
           >
             <li class="nav-item">
               <a class="wooTop__nav__items nav-link py-3 px-3" href="#"
-                ><span><i class="fas fa-search"></i></span
+                ><span class="WooIcon"><i class="fal fa-search fa-lg"></i></span
               ></a>
             </li>
             <li class="nav-item border-end-0">
               <a class="wooTop__nav__items nav-link py-3 px-3" href="#"
-                ><span><i class="far fa-user"></i></span
+                ><span class="WooIcon"><i class="fal fa-user fa-lg"></i></span
               ></a>
             </li>
             <li class="nav-item border-end-0">
               <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
-                ><span><i class="fal fa-alarm-plus"></i></span
+                ><span class="WooIcon"><i class="fal fa-random fa-lg"></i></span
               ></a>
             </li>
             <li class="nav-item border-end-0">
               <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
-                ><span><i class="far fa-heart"></i></span
+                ><span class="WooIcon"><i class="fal fa-heart fa-lg"></i></span
               ></a>
             </li>
             <li class="nav-item border-end-0">
               <a class="wooTop__nav__items nav-link py-3 px-2" href="#"
-                ><span><i class="fas fa-shopping-bag"></i></span
+                ><span class="WooIcon"><i class="fal fa-shopping-bag fa-lg"></i></span
               ></a>
             </li>
           </ul>
